# categorical

./: Cargo.toml  README.md  Readme.md
src/: categorical_hash.rs  categorical_ord.rs  categorical_vec.rs  lib.rs
