[package]
name = "categorical"
authors = ["m-mueller678"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "combining categorical random distributions and computing exact probabilities"
repository = "https://github.com/m-mueller678/categorical"
keywords = ["probability","monadic","math"]
categories = ["mathematics","simulation"]

[dependencies]
num-traits = "0.2.19"